--- a/estilos.css
+++ b/estilos.css
@@ -1,56 +1,69 @@
-.contenedor {
-
-    padding: 20px;
+html,
+body {
+    margin: 0;
+    font-family: 'Onest', sans-serif;
 }
-.navbar{ display: grid;
+
+.contenedor {
+    margin: 0px;
+    padding: 0px;
+}
+
+/* barra estetica de navegacion en una supuesta plataforma mas amplia */
+.navbar {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     background-color: #fff3d1;
     border-color: #ffc107;
     border-style: solid;
+    height: 70px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 .crud {
     display: grid;
     grid-template-rows: 0.1fr 0.1fr 0.2fr 1fr;
     grid-template-columns: 1fr;
-    /* background-color: #fde9f2; */
-    /* background-image: url(/PROYECTO2CRUDAPP/public/assets/img/BlueTrianglePattern.jpg); */
-    background-repeat: no-repeat;
-    background-size: cover;
     padding-bottom: 40px;
 }
 
 .titulocrud {
     text-align: center;
     color: rgb(100, 100, 114, );
+    font-size: 50px;
+    font-weight: 700;
 
 }
 
 /* Tamaño de fuente de las entradas a 1rem unidad relativa, equivale al tamaño por defecto del navegador, 2rem = 18px * 2  */
 .formInput {
-    flex: 1;
     padding: 5px;
-    font-size: 1rem;
+    font-size: 1vw;
     border-radius: 4px;
     border: solid 0.25px rgb(42, 177, 132);
 }
 
+/* estilos formulario */
 .formucrud {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 50px 50px 40px;
-    padding: 10px;
+    padding: 20px;
     grid-gap: 15px;
     border: solid 2px rgb(42, 177, 132);
-    border-radius: 10px;
+    border-radius: 4px;
     height: fit-content;
     width: fit-content;
     background-color: rgb(220, 248, 239);
     justify-self: center;
+    box-sizing: border-box;
+
 }
 
 #fechainput {
-    width: 100%;
+    width: auto;
 }
 
 .button {
@@ -58,11 +71,11 @@
     border-radius: 4px;
     font-weight: 700;
     transition-duration: 0.5s;
-    border: solid 0.25px rgb(42, 177, 132);
 }
 
 .button:hover {
-    transform: scale(1.2);
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 
@@ -80,10 +93,9 @@
     width: 70px;
     transition: transform 0.6s;
     margin-bottom: 15px;
+
 }
 
-.titulocrud {
-}
 
 .botonadd:hover {
     cursor: pointer;
@@ -96,7 +108,7 @@
 
 .botonEnviar {
     background-color: aquamarine;
-    background-image: url(./public/assets/img/send.png);
+    background-image: url(./public/assets/img/save.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -112,6 +124,9 @@
     height: 50px;
     background-color: #dc3545;
     color: #f0f0f0;
+    border-style: hidden;
+    margin-top: 2px;
+
 }
 
 .botonEditar {
@@ -119,24 +134,18 @@
     background-size: contain;
     width: 50px;
     height: 50px;
-    margin-right: 1vw;
+    margin-right: 2px;
     background-color: #ffc107;
+    border-style: hidden;
 }
 
-.mensaje-validacion {
-    color: red;
-    font-weight: bold;
-    margin-top: 10px;
-    display: none;
-    /* Por defecto, oculta el mensaje de validación */
-}
 
 /* Estilos a la tabla del Crud */
 .crudtable {
-    width: 80%;
+    width: 100%;
     border-collapse: collapse;
     justify-self: center;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .table_body td {
@@ -163,6 +172,7 @@
         color: rgb(100, 100, 114, );
         width: 300px;
         justify-self: center;
+        font-size: 30px;
     }
 
     .formucrud {
@@ -174,63 +184,70 @@
         margin-right: 20px;
     }
 
-    input {
-        width: auto;
-    }
-
     .crud {
         display: grid;
-        width: 5vw;
+        width: 100%;
         grid-template-rows: 0.1fr max-content 0.2fr 1fr;
         grid-template-columns: 1fr;
-        padding-bottom: 20px;
+
+    }
+
+    .botonEliminar {
+        width: 40px;
+        height: 40px;
+    }
+
+    .botonEditar {
+        width: 40px;
+        height: 40px;
     }
 
     td {
         font-size: 2vw;
+        padding: 3px;
+        width: 40px;
+        text-align: center;
     }
 
-    th {
+    .table_header {
         font-size: 2vw;
-    }
-
-    input {
-        width: 100%;
+        padding: 0px;
+        height: 20px;
     }
 
     select {
         width: 100%;
+        box-sizing: border-box;
     }
-    .botonadd{
-        margin-bottom: 0px;
+
+    .botonadd {
+        margin-bottom: 20px;
+        padding-bottom: 30px;
     }
 
     .button {
-        width: 40px;
-        height: 40px;
+        width: 25px;
+        height: 25px;
     }
 
     .botonEnviar {
         grid-area: 3 / 3 / 4 / 4;
         width: 100%;
+        height: 100%;
     }
 
     .formInput {
-        flex: 1;
         padding: 5px;
         font-size: 1rem;
         border-radius: 4px;
         border: solid 0.25px rgb(42, 177, 132);
+        width: 100%;
+        box-sizing: border-box;
     }
 
     .crudtable {
-        max-width: 700px;
-    }
-
-    .table_header .td {
-        font-size: 1vw;
-        height: 1vw;
-        width: 1vw;
+        justify-items: center;
+        width: auto;
     }
 
     .hidden {
