--- a/estilos.css
+++ b/estilos.css
@@ -12,7 +12,7 @@ body {
 /* barra estetica de navegacion en una supuesta plataforma mas amplia */
 .navbar {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 70px;
     background-color: #fff3d1;
     border-color: #ffc107;
